--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Kartik's Personal Site</title>
 </head>
 <body style="background-color: antiquewhite;">
-    <table>
+    <table cellspacing="20">
         <tr>
             <td><img src="rdj.jfif" width="250px" height="250px" alt="rdj"></td>
             <td><h1>Kartik Sonar</h1>
